# digital_test_runner

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: main.yml
examples/: dynamic.rs  static.rs
examples/util/: mod.rs
src/: check.rs  data_row_iterator.rs  dig.rs  errors.rs  eval_context.rs  expr.rs  framed_map.rs  lexer.rs  lib.rs  main.rs  parse.rs  parsed_test_case.rs  parser.rs  static_test.rs  stmt.rs  testcase.rs  tests.rs  value.rs
src/lexer/: lexer.rs  mod.rs  token.rs
src/parser/: binoptree.rs  expr.rs  mod.rs  parser.rs  stmt.rs
src/stmt/: tests.rs
src/testcase/: parse.rs
tests/: 74779.rs
tests/data/: 74181.dig  74779.dig  74779.v  74779_int_tb.v  Counter.dig  Counter.v  Counter_int_tb.v  adder.dig  xml-error.dig
