[package]
name = "digital_test_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
getrandom = "0.2.12"
logos = "0.14.0"
rand = "0.8.5"
roxmltree = "0.20.0"
thiserror = "1.0.61"

[dev-dependencies]
colored = "2.1.0"
rstest = "0.21.0"
which = "6.0.1"
