[package]
name = "digital_test_runner"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
license = "MIT OR Apache-2.0"
description = "Parse and run tests used in hnemann's Digital logic designer and circuit simulator."
homepage = "https://github.com/olofos/digital_test_runner"
repository = "https://github.com/olofos/digital_test_runner"
keywords = ["digital", "circuit", "testing"]
categories = ["development-tools::testing", "embedded", "compilers"]

[dependencies]
getrandom = "0.2.12"
logos = "0.14.0"
miette = "7.2.0"
rand = "0.8.5"
roxmltree = "0.20.0"
thiserror = "1.0.61"

[dev-dependencies]
colored = "2.1.0"
rstest = "0.21.0"
which = "6.0.1"
miette = { version = "7.2.0", features = ["fancy"] }
